# masstransit_cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  build_and_test.sh  test.sh
cmake/: FindRabbitmqc.cmake  FindSimpleAmqpClient.cmake  LibFindProcess.cmake  copy_deps.ps1  utils.cmake
include/masstransit_cpp/: bus.hpp  bus_control.hpp  bus_factory.hpp  consume_context.hpp  consume_context_info.hpp  datetime.hpp  exchange_manager.hpp  global.hpp  host_info.hpp  i_bus.hpp  i_bus_control.hpp  i_message_consumer.hpp  i_publish_endpoint.hpp  i_receive_endpoint.hpp  i_receive_endpoint_configurator.hpp  json.hpp  json_adapters.hpp  message_consumer.hpp  message_handler.hpp  receive_endpoint.hpp  receive_endpoint_config_base.hpp  send_endpoint.hpp  uri.hpp
include/masstransit_cpp/in_memory/: exchange_manager.hpp  in_memory_bus.hpp  in_memory_configurator.hpp  receive_endpoint.hpp  receive_endpoint_config.hpp  receive_endpoint_configurator.hpp
include/masstransit_cpp/rabbit_mq/: amqp_channel.hpp  amqp_envelope.hpp  amqp_host.hpp  amqp_host_configurator.hpp  amqp_message.hpp  amqp_table.hpp  exceptions.hpp  exchange_manager.hpp  message_publisher.hpp  rabbit_mq_bus.hpp  rabbit_mq_configurator.hpp  receive_endpoint.hpp  receive_endpoint_config.hpp  receive_endpoint_configurator.hpp  ssl_config.hpp
include/masstransit_cpp/threads/: queue_worker.hpp  task_repeat.hpp  tasks_queue.hpp  thread_pool.hpp  worker.hpp  worker_pool.hpp  worker_thread.hpp
include/masstransit_cpp/utils/: console_error_handler.hpp  datetime.hpp  i_error_handler.hpp  json.hpp  json_adapters.hpp  tasks_queue.hpp  thread_pool.hpp  worker.hpp  worker_thread.hpp
masstransit_cpp/: CMakeLists.txt
masstransit_cpp/include/masstransit_cpp/: bus.hpp  consume_context.hpp  exchange_manager.hpp  global.hpp  host_info.hpp  json.hpp  receive_endpoint.hpp  send_endpoint.hpp
masstransit_cpp/src/: bus.cpp  consume_context.cpp  exchange_manager.cpp  host_info.cpp  receive_endpoint.cpp  send_endpoint.cpp  uri.cpp
masstransit_cpp_tests/: CMakeLists.txt
masstransit_cpp_tests/src/: amqp_host_tests.cpp  bus_config_tests.cpp  bus_di_config_tests.cpp  consume_context_tests.cpp  in_memory_bus_config_tests.cpp  main.cpp  message_consumer_depend.cpp  message_consumer_depend.hpp  message_consumer_mock.hpp  message_mock.cpp  message_mock.hpp  worker_tests.cpp
src/: bus.cpp  bus_control.cpp  bus_factory.cpp  consume_context.cpp  consume_context_info.cpp  exchange_manager.cpp  host_info.cpp  i_bus_control.cpp  i_receive_endpoint.cpp  i_receive_endpoint_configurator.cpp  json_adapters.cpp  receive_endpoint.cpp  send_endpoint.cpp
src/in_memory/: exchange_manager.cpp  in_memory_bus.cpp  in_memory_configurator.cpp  receive_endpoint.cpp  receive_endpoint_configurator.cpp
src/rabbit_mq/: amqp_channel.cpp  amqp_envelope.cpp  amqp_host.cpp  amqp_host_configurator.cpp  amqp_message.cpp  amqp_table.cpp  exceptions.cpp  exchange_manager.cpp  message_publisher.cpp  rabbit_mq_bus.cpp  rabbit_mq_configurator.cpp  receive_endpoint.cpp  receive_endpoint_config.cpp  receive_endpoint_configurator.cpp  ssl_config.cpp
src/threads/: queue_worker.cpp  task_repeat.cpp  tasks_queue.cpp  thread_pool.cpp  worker.cpp  worker_pool.cpp  worker_thread.cpp
src/utils/: datetime.cpp  errors_handlers.cpp  json_adapters.cpp  thread_pool.cpp  worker.cpp  worker_thread.cpp
tests/: CMakeLists.txt
tests/include/: catch.hpp  error_handler_mock.hpp  message_consumer_depend.hpp  message_consumer_mock.hpp  message_consumer_threads.hpp  message_mock.hpp
tests/src/: error_handler_mock.cpp  main.cpp  message_consumer_depend.cpp  message_consumer_mock.cpp  message_consumer_threads.cpp  message_mock.cpp
tests/src/tests/: amqp_ack_tests.cpp  amqp_channels_tests.cpp  amqp_connect_tests.cpp  amqp_consume_tests.cpp  amqp_exchange_tests.cpp  amqp_get_tests.cpp  amqp_host_tests.cpp  amqp_message_tests.cpp  amqp_nack_tests.cpp  amqp_publish_tests.cpp  amqp_queue_tests.cpp  amqp_table_tests.cpp  bus_config_tests.cpp  bus_di_config_tests.cpp  consume_context_tests.cpp  in_memory_bus_config_tests.cpp  worker_tests.cpp
